crates/zizmor/tests/integration/snapshots/integration__snapshot__bot_conditions.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"bot-conditions.yml\")).run()?"
---
error[dangerous-triggers]: use of fundamentally insecure workflow trigger
 --> @@INPUT@@:1:1
  |
1 | on: pull_request_target
  | ^^^^^^^^^^^^^^^^^^^^^^^ pull_request_target is almost always used insecurely
  |
  = note: audit confidence → Medium

error[bot-conditions]: spoofable bot actor check
 --> @@INPUT@@:8:5
  |
8 |     if: github.actor == 'dependabot[bot]'
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ actor context may be spoofable
  |
  = note: audit confidence → High

error[bot-conditions]: spoofable bot actor check
  --> @@INPUT@@:12:9
   |
12 |         if: ${{ github.actor == 'dependabot[bot]' }}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ actor context may be spoofable
   |
   = note: audit confidence → High

error[bot-conditions]: spoofable bot actor check
  --> @@INPUT@@:16:9
   |
16 |         if: ${{ github.actor == 'dependabot[bot]' && github.repository == 'example/example' }}
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ actor context may be spoofable
   |
   = note: audit confidence → Medium

error[bot-conditions]: spoofable bot actor check
  --> @@INPUT@@:20:9
   |
20 |         if: github.actor == 'renovate[bot]'
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ actor context may be spoofable
   |
   = note: audit confidence → High

error[bot-conditions]: spoofable bot actor check
  --> @@INPUT@@:29:9
   |
29 |         if: github.ACTOR == 'dependabot[bot]'
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ actor context may be spoofable
   |
   = note: audit confidence → High

error[bot-conditions]: spoofable bot actor check
  --> @@INPUT@@:34:9
   |
34 |         if: github.actor == 'mystery[bot]'
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ actor context may be spoofable
   |
   = note: audit confidence → High

error[bot-conditions]: spoofable bot actor check
  --> @@INPUT@@:39:9
   |
39 |         if: github['actor'] == 'dependabot[bot]'
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ actor context may be spoofable
   |
   = note: audit confidence → High

8 findings: 0 unknown, 0 informational, 0 low, 0 medium, 8 high
